stageleft/tests/compile-fail/unresolved_identifier.stderr
error[E0425]: cannot find value `xyz` in this scope
 --> tests/compile-fail/unresolved_identifier.rs:8:9
  |
8 |         xyz
  |         ^^^ not found in this scope
